Fix reservation-form-wrapper alignment

--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -387,7 +387,9 @@ td {
 /* RESERVATION FORM */
 .reservationWrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .reservationForm {
